# lua-sophia

./: CMakeLists.txt  LICENSE  README.md  dist.info  index.html  lua-sophia.c  test.lua
cmake/: FindSophia.cmake
